--- a/frontend/src/components/piano/piano.css
+++ b/frontend/src/components/piano/piano.css
@@ -1,4 +1,3 @@
-/* Estilos para las teclas blancas */
 .tecla-blanca {
     width: 88px; 
     height: 272px; 
@@ -15,24 +14,20 @@
     border-bottom-left-radius: 16px;
   }
   
-  /* Estilos para la primera tecla blanca (con borde redondeado en la parte superior izquierda) */
   .tecla-blanca.first {
     border-top-left-radius: 16px; 
   }
   
-  /* Estilos para la última tecla blanca (con borde redondeado en la parte superior derecha) */
   .tecla-blanca.last {
     border-top-right-radius: 16px; 
   }
   
-  /* Estilos cuando la tecla está activa (presionada) */
   .tecla-blanca.activada {
     background: #a5a5a5; 
     box-shadow: inset 0 4 10px 0 rgba(0, 0, 0, 0.6), 0 15px 0px 0 rgb(94, 94, 94); 
     transform: scale(0.99); 
   }
   
-  /* Estilos para las teclas negras */
   .tecla-negra {
     position: absolute;
     top: 7px;
@@ -52,9 +47,8 @@
     border-bottom-left-radius: 10px;
   }
 
-  /* Estilos cuando la tecla negra está activa (presionada) */
   .tecla-negra.activada {
-    background-color: #101010; /* Color más oscuro cuando se presiona */
+    background-color: #101010;
     box-shadow: inset 0px 4px 10px rgba(23, 23, 23, 0.3);
     transform: scale(0.99); 
   }
